2011-10-28  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/50864
	* g++.dg/template/crash109.C: New.

2011-10-28  Steven G. Kargl  <kargl@gcc.gnu.org>

	* gfortran.dg/nearest_5.f90: New test.

2011-10-28  Jakub Jelinek  <jakub@redhat.com>

	* gcc.dg/vshift-1.c: New test.
	* gcc.dg/vshift-2.c: New test.
	* gcc.target/i386/xop-vshift-1.c: New test.
	* gcc.target/i386/xop-vshift-2.c: New test.
	* gcc.target/i386/avx2-vshift-1.c: New test.

2011-10-28  Chung-Lin Tang  <cltang@codesourcery.com>

	PR rtl-optimization/49720
	* g++.dg/torture/pr49720.C: New test.

2011-10-27  David S. Miller  <davem@davemloft.net>

	* gcc.target/sparc/setcc-3.c: New test.

2011-10-27  Roberto Agostino Vitillo  <ravitillo@lbl.gov>

	PR c++/30066
	* g++.dg/ext/visibility/fvisibility-inlines-hidden-4.C: New test.

2011-10-27  Jakub Jelinek  <jakub@redhat.com>

	* gcc.target/i386/sse2-cvt-1.c: New test.
	* gcc.target/i386/sse2-cvt-2.c: New test.
	* gcc.target/i386/avx-cvt-1.c: New test.
	* gcc.target/i386/avx-cvt-2.c: New test.
	* gcc.target/i386/avx2-cvt-1.c: New test.
	* gcc.target/i386/avx2-cvt-2.c: New test.

2011-10-27  Martin Jambor  <mjambor@suse.cz>

	* g++.dg/tree-ssa/pr45605.C: Scan fre1 dump and unxfail.

2011-10-27  Uros Bizjak  <ubizjak@gmail.com>
	    Steven G. Kargl  <kargl@gcc.gnu.org>

	PR target/50875
	* gfortran.dg/pr50875.f90: New test.

2011-10-26  David S. Miller  <davem@davemloft.net>

	* gcc.target/sparc/fmaf-1.c: New test.

	* gcc.target/sparc/setcc-1.c: New test.
	* gcc.target/sparc/setcc-2.c: New test.

2011-10-26  Joseph Myers  <joseph@codesourcery.com>

	* gcc.dg/tls/thr-cse-1.c: For i?86-*-mingw*, check for multiple calls.

2011-10-26  Joseph Myers  <joseph@codesourcery.com>

	* gcc.dg/graphite/run-id-1.c: Pass -Wl,--stack,12582912 option for
	Windows targets.

2011-10-26  Joseph Myers  <joseph@codesourcery.com>

	* gcc.target/i386/pr37843-4.c: Allow for leading underscores on
	symbol names.

2011-10-26  Joseph Myers  <joseph@codesourcery.com>
