@@ -5,9 +5,9 @@
    These are invalid for all targets, not just those that support
     decimal float.  */
 
-long double dF = 4.5dF;		/* { dg-error "invalid suffix" } */
-long double Df = 4.5Df;		/* { dg-error "invalid suffix" } */
-long double dD = 4.5dD;		/* { dg-error "invalid suffix" } */
-long double Dd = 4.5Dd;		/* { dg-error "invalid suffix" } */
-long double dL = 4.5dL;		/* { dg-error "invalid suffix" } */
-long double Dl = 4.5Dl;		/* { dg-error "invalid suffix" } */
+long double dF = 4.5dF;	   /* { dg-error "invalid suffix|user-defined" } */
+long double Df = 4.5Df;	   /* { dg-error "invalid suffix|user-defined" } */
+long double dD = 4.5dD;	   /* { dg-error "invalid suffix|user-defined" } */
+long double Dd = 4.5Dd;	   /* { dg-error "invalid suffix|user-defined" } */
+long double dL = 4.5dL;	   /* { dg-error "invalid suffix|user-defined" } */
+long double Dl = 4.5Dl;	   /* { dg-error "invalid suffix|user-defined" } */
