@@ -1,3 +1,7 @@
+2011-10-28  Jason Merrill  <jason@redhat.com>
+
+	* c-c++-common/dfp/pr33466.c: Adjust for user-defined literals.
+
 2011-10-28  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/50864
